--- a/translations/kangyur/placeholders/057-002_toh143,611,918-the_two_stanza_incantation.xml
+++ b/translations/kangyur/placeholders/057-002_toh143,611,918-the_two_stanza_incantation.xml
@@ -14,7 +14,7 @@
                 <editor role="proofreader" xml:id="UT22084-057-002-4">Daniela Espíndola</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -45,7 +45,7 @@
                     <ref>Toh 918</ref>
                     <biblScope>vol.100, ff.262r-262r(pp.523-523)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="100" start-page="523" end-page="523"/>
+                        <volume number="101" start-page="521" end-page="521"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12680" work="W22084"/>
@@ -79,6 +79,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-03-18T15:31:27.412Z" type="text-version" status="0.0.6" xml:id="UT22084-057-002-13">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:26:40.316Z" type="text-version" status="0.0.7" xml:id="UT22084-057-002-14">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
