--- a/translations/kangyur/placeholders/093-022_toh707,919-incantation_for_a_beautiful_slender_physique.xml
+++ b/translations/kangyur/placeholders/093-022_toh707,919-incantation_for_a_beautiful_slender_physique.xml
@@ -15,7 +15,7 @@
                 <author role="translatorEng" xml:id="UT22084-093-022-7">Patrick Lambelet</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -37,7 +37,7 @@
                     <ref>Toh 919</ref>
                     <biblScope>vol.100, ff.262v-264r(pp.524-527)</biblScope>
                     <location work="UT4CZ5369" count-pages="4">
-                        <volume number="100" start-page="524" end-page="527"/>
+                        <volume number="101" start-page="522" end-page="525"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12681" work="W22084"/>
@@ -62,6 +62,9 @@
                 </change>
                 <change who="#line-tofte" when="2023-08-08T14:13:49.821Z" type="text-version" status="0.0.4" xml:id="UT22084-093-022-8">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:27:23.316Z" type="text-version" status="0.0.5" xml:id="UT22084-093-022-9">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
