--- a/translations/kangyur/placeholders/090-018_toh574,922-the_incantation_of_cudamani.xml
+++ b/translations/kangyur/placeholders/090-018_toh574,922-the_incantation_of_cudamani.xml
@@ -12,6 +12,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gtsug gi nor bu zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryacūḍamaṇināmadhāraṇī</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status=""/>
                 <idno xml:id="UT22084-090-018"/>
@@ -30,7 +34,7 @@
                     <ref>Toh 922</ref>
                     <biblScope>vol.100, ff.265v-267r(pp.530-533)</biblScope>
                     <location work="UT4CZ5369" count-pages="4">
-                        <volume number="100" start-page="530" end-page="533"/>
+                        <volume number="101" start-page="528" end-page="531"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12684" work="W22084"/>
@@ -41,6 +45,9 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-090-018-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:31:37.558Z" type="text-version" status="0.0.2" xml:id="UT22084-090-018-2">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
