--- a/translations/kangyur/placeholders/091-009_toh612,923-the_incantation_the_arm_bracelet_atop_the_standard.xml
+++ b/translations/kangyur/placeholders/091-009_toh612,923-the_incantation_the_arm_bracelet_atop_the_standard.xml
@@ -20,7 +20,7 @@
                 <editor role="copyEditor" xml:id="UT22084-091-009-40">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -42,7 +42,7 @@
                     <ref>Toh 923</ref>
                     <biblScope>vol.100, ff.267r-268v(pp.533-536)</biblScope>
                     <location work="UT4CZ5369" count-pages="4">
-                        <volume number="100" start-page="533" end-page="536"/>
+                        <volume number="101" start-page="531" end-page="534"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12685" work="W22084"/>
@@ -106,6 +106,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-03-08T14:44:42.469Z" type="text-version" status="0.0.12" xml:id="UT22084-091-009-43">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:32:27.091Z" type="text-version" status="0.0.13" xml:id="UT22084-091-009-44">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
