--- a/translations/kangyur/placeholders/091-030_toh633,924-the_incantation_known_as_golden.xml
+++ b/translations/kangyur/placeholders/091-030_toh633,924-the_incantation_known_as_golden.xml
@@ -13,7 +13,7 @@
                 <author role="translatorEng" xml:id="UT22084-091-030-7">Patrick Lambelet</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -35,7 +35,7 @@
                     <ref>Toh 924</ref>
                     <biblScope>vol.100, ff.268v-271r(pp.536-541)</biblScope>
                     <location work="UT4CZ5369" count-pages="6">
-                        <volume number="100" start-page="536" end-page="541"/>
+                        <volume number="101" start-page="534" end-page="539"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12686" work="W22084"/>
@@ -60,6 +60,9 @@
                 </change>
                 <change who="#line-tofte" when="2023-08-08T14:16:26.211Z" type="text-version" status="0.0.4" xml:id="UT22084-091-030-8">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:35:11.294Z" type="text-version" status="0.0.5" xml:id="UT22084-091-030-9">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
