--- a/translations/kangyur/placeholders/091-005_toh608,926-sarvantarayikavisodhani_dharani.xml
+++ b/translations/kangyur/placeholders/091-005_toh608,926-sarvantarayikavisodhani_dharani.xml
@@ -12,6 +12,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bar du gcod pa thams cad rnam par sbyong ba zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryasarvāntarāyika­viśodhanī­nāmadhāraṇī</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status=""/>
                 <idno xml:id="UT22084-091-005"/>
@@ -30,7 +34,7 @@
                     <ref>Toh 926</ref>
                     <biblScope>vol.100, ff.272v-273v(pp.544-546)</biblScope>
                     <location work="UT4CZ5369" count-pages="3">
-                        <volume number="100" start-page="544" end-page="546"/>
+                        <volume number="101" start-page="542" end-page="544"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12688" work="W22084"/>
@@ -41,6 +45,9 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-091-005-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:36:44.635Z" type="text-version" status="0.0.2" xml:id="UT22084-091-005-2">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
