--- a/translations/kangyur/placeholders/091-007_toh610,927-the_king_of_spells_of_dramida.xml
+++ b/translations/kangyur/placeholders/091-007_toh610,927-the_king_of_spells_of_dramida.xml
@@ -12,7 +12,7 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa 'gro lding ba'i rig sngags kyi rgyal po/</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -35,7 +35,7 @@
                     <ref>Toh 927</ref>
                     <biblScope>vol.100, ff.273v-276r(pp.546-551)</biblScope>
                     <location work="UT4CZ5369" count-pages="6">
-                        <volume number="100" start-page="546" end-page="551"/>
+                        <volume number="101" start-page="544" end-page="549"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12689" work="W22084"/>
@@ -57,6 +57,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-091-007-5">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:39:26.458Z" type="text-version" status="0.0.5" xml:id="UT22084-091-007-6">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
