--- a/translations/kangyur/placeholders/093-023_toh708,928-aparajita_who_grants_fearlessness.xml
+++ b/translations/kangyur/placeholders/093-023_toh708,928-aparajita_who_grants_fearlessness.xml
@@ -13,7 +13,7 @@
                 <editor role="reviser" xml:id="UT22084-093-023-5">Annie Heckman</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -34,7 +34,7 @@
                     <ref>Toh 928</ref>
                     <biblScope>vol.100, ff.276r-277v(pp.551-554)</biblScope>
                     <location work="UT4CZ5369" count-pages="4">
-                        <volume number="100" start-page="551" end-page="554"/>
+                        <volume number="101" start-page="549" end-page="552"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12690" work="W22084"/>
@@ -54,6 +54,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T11:04:30.153Z" type="text-version" status="0.0.2" xml:id="UT22084-093-023-6">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:40:02.907Z" type="text-version" status="0.0.3" xml:id="UT22084-093-023-7">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
