--- a/translations/kangyur/placeholders/091-004_toh607,929-the_jeweled_rosary_the_unconquerable.xml
+++ b/translations/kangyur/placeholders/091-004_toh607,929-the_jeweled_rosary_the_unconquerable.xml
@@ -15,6 +15,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gzhan gyis mi thub pa'i rin po che'i phreng ba zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryaratnamālānāmāparājita</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status=""/>
                 <idno xml:id="UT22084-091-004"/>
@@ -33,7 +37,7 @@
                     <ref>Toh 929</ref>
                     <biblScope>vol.100, ff.277v-279r(pp.554-557)</biblScope>
                     <location work="UT4CZ5369" count-pages="4">
-                        <volume number="100" start-page="554" end-page="557"/>
+                        <volume number="101" start-page="552" end-page="555"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12691" work="W22084"/>
@@ -44,6 +48,9 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-091-004-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:40:31.8Z" type="text-version" status="0.0.2" xml:id="UT22084-091-004-2">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
