--- a/translations/kangyur/placeholders/090-021_toh577,933-the_incantation_of_the_perfection_of_wisdom_in_twentyfive_thousand_lines.xml
+++ b/translations/kangyur/placeholders/090-021_toh577,933-the_incantation_of_the_perfection_of_wisdom_in_twentyfive_thousand_lines.xml
@@ -15,7 +15,7 @@
                 <author role="translatorEng" xml:id="UT22084-090-021-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -37,7 +37,7 @@
                     <ref>Toh 933</ref>
                     <biblScope>vol.100, ff.280v-281r(pp.560-561)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="100" start-page="560" end-page="561"/>
+                        <volume number="101" start-page="558" end-page="559"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12695" work="W22084"/>
@@ -65,6 +65,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-090-021-11">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:44:14.387Z" type="text-version" status="0.0.6" xml:id="UT22084-090-021-12">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
