--- a/translations/kangyur/placeholders/090-029_toh585,941-essence_of_the_gandavyuha.xml
+++ b/translations/kangyur/placeholders/090-029_toh585,941-essence_of_the_gandavyuha.xml
@@ -14,7 +14,7 @@
                 <author role="translatorEng" xml:id="UT22084-090-029-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -36,7 +36,7 @@
                     <ref>Toh 941</ref>
                     <biblScope>vol.100, ff.282r-282v(pp.563-564)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="100" start-page="563" end-page="564"/>
+                        <volume number="101" start-page="561" end-page="562"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12703" work="W22084"/>
@@ -64,6 +64,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-090-029-11">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:46:00.205Z" type="text-version" status="0.0.6" xml:id="UT22084-090-029-12">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
