--- a/translations/kangyur/placeholders/090-032_toh588,944-the_incantation_that_captures_the_great_amulet.xml
+++ b/translations/kangyur/placeholders/090-032_toh588,944-the_incantation_that_captures_the_great_amulet.xml
@@ -16,7 +16,7 @@
                 <author role="translatorEng" xml:id="UT22084-090-032-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -38,7 +38,7 @@
                     <ref>Toh 944</ref>
                     <biblScope>vol.100, ff.282v-282v(pp.564-564)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="100" start-page="564" end-page="564"/>
+                        <volume number="101" start-page="562" end-page="562"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12706" work="W22084"/>
@@ -66,6 +66,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-090-032-11">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:52:18.971Z" type="text-version" status="0.0.6" xml:id="UT22084-090-032-12">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
