--- a/translations/kangyur/placeholders/090-033_toh589,945-the_incantation_of_the_descent_to_lanka_sutra.xml
+++ b/translations/kangyur/placeholders/090-033_toh589,945-the_incantation_of_the_descent_to_lanka_sutra.xml
@@ -17,7 +17,7 @@
                 <author role="translatorEng" xml:id="UT22084-090-033-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -39,7 +39,7 @@
                     <ref>Toh 945</ref>
                     <biblScope>vol.100, ff.282v-283r(pp.564-565)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="100" start-page="564" end-page="565"/>
+                        <volume number="101" start-page="562" end-page="563"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12707" work="W22084"/>
@@ -67,6 +67,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-090-033-11">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:52:49.599Z" type="text-version" status="0.0.6" xml:id="UT22084-090-033-12">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
