--- a/translations/kangyur/placeholders/062-019_toh219-the_sutra_on_putting_an_end_to_karmic_obscurations.xml
+++ b/translations/kangyur/placeholders/062-019_toh219-the_sutra_on_putting_an_end_to_karmic_obscurations.xml
@@ -17,12 +17,12 @@
                 <editor role="copyEditor" xml:id="UT22084-062-019-24">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-062-019"/>
                 <date/>
             </publicationStmt>
@@ -88,6 +88,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-07T16:33:36.42Z" type="text-version" status="0.0.10" xml:id="UT22084-062-019-27">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-01T09:57:36.55Z" type="translation-status" status="2.a" xml:id="UT22084-062-019-28">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-01T09:57:36.55Z" type="text-version" status="0.0.11" xml:id="UT22084-062-019-29">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
