--- a/translations/kangyur/placeholders/088-029_toh535,868-recollecting_the_names_of_candraprabha.xml
+++ b/translations/kangyur/placeholders/088-029_toh535,868-recollecting_the_names_of_candraprabha.xml
@@ -8,15 +8,16 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">zla 'od kyi mtshan rjes dran/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">zla ba'i 'od kyi mtshan rjes su dran pa/</title>
-                <author role="translatorMain" xml:id="UT22084-088-029-1"/>
+                <author role="translatorMain" xml:id="UT22084-088-029-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-088-029-2">Bruno Galasek-Hul</author>
+                <editor role="projectEditor" xml:id="UT22084-088-029-14">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-088-029"/>
                 <date/>
             </publicationStmt>
@@ -67,6 +68,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-17T13:00:34.331Z" type="text-version" status="0.0.6" xml:id="UT22084-088-029-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-17T13:01:06.825Z" type="text-version" status="0.0.7" xml:id="UT22084-088-029-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-01T13:35:26.307Z" type="translation-status" status="2.f" xml:id="UT22084-088-029-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-01T13:35:26.307Z" type="text-version" status="0.0.8" xml:id="UT22084-088-029-17">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
