--- a/translations/kangyur/placeholders/088-030_toh536,869-recollecting_the_common_essence_of_the_tathagatas.xml
+++ b/translations/kangyur/placeholders/088-030_toh536,869-recollecting_the_common_essence_of_the_tathagatas.xml
@@ -9,15 +9,16 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa'i spyi'i snying po rjes dran/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa'i spyi'i snying po rjes su dran pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa'i spyi'i snying po rjes su dran pa/</title>
-                <author role="translatorMain" xml:id="UT22084-088-030-1"/>
+                <author role="translatorMain" xml:id="UT22084-088-030-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-088-030-2">Catherine Dalton</author>
+                <editor role="projectEditor" xml:id="UT22084-088-030-14">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-088-030"/>
                 <date/>
             </publicationStmt>
@@ -68,6 +69,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-17T13:01:33.9Z" type="text-version" status="0.0.6" xml:id="UT22084-088-030-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-17T13:02:06.71Z" type="text-version" status="0.0.7" xml:id="UT22084-088-030-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-01T13:42:09.797Z" type="translation-status" status="2.f" xml:id="UT22084-088-030-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-01T13:42:09.797Z" type="text-version" status="0.0.8" xml:id="UT22084-088-030-17">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
