--- a/translations/kangyur/placeholders/088-031_toh537,870-recollecting_the_names_of_buddha_sikhin.xml
+++ b/translations/kangyur/placeholders/088-031_toh537,870-recollecting_the_names_of_buddha_sikhin.xml
@@ -11,15 +11,16 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">sangs rgyas rin chen gtsug tor gyi mtshan rjes su dran pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">sangs rgyas rin chen gtsug tor gyi mtshan rjes dran/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">sangs rgyas rin chen gtsug tor can gyi mtshan rjes su dran pa/</title>
-                <author role="translatorMain" xml:id="UT22084-088-031-1"/>
+                <author role="translatorMain" xml:id="UT22084-088-031-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-088-031-2">Catherine Dalton</author>
+                <editor role="projectEditor" xml:id="UT22084-088-031-14">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-088-031"/>
                 <date/>
             </publicationStmt>
@@ -70,6 +71,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-17T13:02:32.547Z" type="text-version" status="0.0.6" xml:id="UT22084-088-031-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-17T13:03:03.91Z" type="text-version" status="0.0.7" xml:id="UT22084-088-031-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-01T13:44:45.247Z" type="translation-status" status="2.f" xml:id="UT22084-088-031-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-01T13:44:45.247Z" type="text-version" status="0.0.8" xml:id="UT22084-088-031-17">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
