--- a/translations/kangyur/placeholders/088-032_toh538,1068-the_incantation_the_cloud_of_offerings.xml
+++ b/translations/kangyur/placeholders/088-032_toh538,1068-the_incantation_the_cloud_of_offerings.xml
@@ -9,16 +9,17 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">mchod sprin gyi gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Pūjameghanāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">mchod pa'i sprin zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-088-032-1"/>
+                <author role="translatorMain" xml:id="UT22084-088-032-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-088-032-2">Catherine Dalton</author>
+                <editor role="projectEditor" xml:id="UT22084-088-032-15">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-088-032"/>
                 <date/>
             </publicationStmt>
@@ -72,6 +73,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-17T13:03:31.409Z" type="text-version" status="0.0.7" xml:id="UT22084-088-032-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-17T13:04:01.632Z" type="text-version" status="0.0.8" xml:id="UT22084-088-032-16">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-01T13:47:26.297Z" type="translation-status" status="2.f" xml:id="UT22084-088-032-17">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-01T13:47:26.297Z" type="text-version" status="0.0.9" xml:id="UT22084-088-032-18">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
