--- a/translations/kangyur/placeholders/063-005_toh224-the_sutra_of_the_chapter_about_sthiradhyasa__drdhadhyasaya.xml
+++ b/translations/kangyur/placeholders/063-005_toh224-the_sutra_of_the_chapter_about_sthiradhyasa__drdhadhyasaya.xml
@@ -17,11 +17,11 @@
                 <editor role="projectEditor" xml:id="UT22084-063-005-18">John Canti</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-063-005"/>
                 <date/>
             </publicationStmt>
@@ -70,6 +70,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-01-08T14:38:19.455Z" type="text-version" status="0.0.8" xml:id="UT22084-063-005-19">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-02T12:52:39.197Z" type="translation-status" status="2.e" xml:id="UT22084-063-005-20">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-02T12:52:39.197Z" type="text-version" status="0.0.9" xml:id="UT22084-063-005-21">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
