--- a/translations/kangyur/placeholders/066-013_toh255-the_ocean_of_the_dharma.xml
+++ b/translations/kangyur/placeholders/066-013_toh255-the_ocean_of_the_dharma.xml
@@ -15,13 +15,15 @@
                 <consultant role="projectManager" xml:id="UT22084-066-013-4">Lowell Cook</consultant>
                 <editor role="projectEditor" xml:id="UT22084-066-013-21">George FitzHerbert</editor>
                 <editor role="copyEditor" xml:id="UT22084-066-013-32">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-066-013-46">Nathaniel Rich</editor>
+                <editor role="projectEditor" xml:id="UT22084-066-013-47">John Canti</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.15 <date>2024</date>
+                <edition>v 0.0.17 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-066-013"/>
                 <date/>
             </publicationStmt>
@@ -108,6 +110,15 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-30T13:52:48.865Z" type="text-version" status="0.0.15" xml:id="UT22084-066-013-39">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-30T13:53:33.345Z" type="text-version" status="0.0.16" xml:id="UT22084-066-013-48">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-03T14:00:06.507Z" type="translation-status" status="2.a" xml:id="UT22084-066-013-49">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-03T14:00:06.507Z" type="text-version" status="0.0.17" xml:id="UT22084-066-013-50">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
