--- a/translations/kangyur/placeholders/079-041_toh414-the_unsullied_a_sovereign_tantra.xml
+++ b/translations/kangyur/placeholders/079-041_toh414-the_unsullied_a_sovereign_tantra.xml
@@ -11,11 +11,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Anāvilatantrarājanāma</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2024</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="4"/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-079-041"/>
             </publicationStmt>
             <sourceDesc>
@@ -40,6 +40,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-04-26T10:15:45.773Z" type="text-version" status="0.0.1" xml:id="UT22084-079-041-3">
                     <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-06T09:18:55.009Z" type="translation-status" status="3" xml:id="UT22084-079-041-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-06T09:18:55.009Z" type="text-version" status="0.0.2" xml:id="UT22084-079-041-5">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
