--- a/translations/tengyur/placeholders/008-006_toh1204-srianavilanamatantrapanjika.xml
+++ b/translations/tengyur/placeholders/008-006_toh1204-srianavilanamatantrapanjika.xml
@@ -10,11 +10,11 @@
                 <title xml:lang="en" type="mainTitle">A Commentary on the Difficult Points of the Tantra known as “The Unsullied”</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2024</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="4"/>
+                <availability status="3"/>
                 <idno xml:id="UT23703-008-006"/>
             </publicationStmt>
             <sourceDesc>
@@ -43,6 +43,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-04-26T10:16:28.365Z" type="text-version" status="0.0.1" xml:id="UT23703-008-006-5">
                     <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-06T09:20:24.693Z" type="translation-status" status="3" xml:id="UT23703-008-006-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-06T09:20:24.693Z" type="text-version" status="0.0.2" xml:id="UT23703-008-006-7">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
