--- a/translations/kangyur/placeholders/091-009_toh612,923-the_incantation_the_arm_bracelet_atop_the_standard.xml
+++ b/translations/kangyur/placeholders/091-009_toh612,923-the_incantation_the_arm_bracelet_atop_the_standard.xml
@@ -20,11 +20,11 @@
                 <editor role="copyEditor" xml:id="UT22084-091-009-40">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-091-009"/>
                 <date/>
             </publicationStmt>
@@ -109,6 +109,12 @@
                 </change>
                 <change who="#sameer" when="2024-05-01T05:32:27.091Z" type="text-version" status="0.0.13" xml:id="UT22084-091-009-44">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-06T13:40:05.224Z" type="translation-status" status="2.c" xml:id="UT22084-091-009-45">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-06T13:40:05.224Z" type="text-version" status="0.0.14" xml:id="UT22084-091-009-46">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
