--- a/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
+++ b/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
@@ -18,11 +18,11 @@
                 <editor role="copyEditor" xml:id="UT22084-072-019-34">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-072-019"/>
                 <date/>
             </publicationStmt>
@@ -94,6 +94,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-19T11:52:12.246Z" type="text-version" status="0.0.12" xml:id="UT22084-072-019-37">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-06T13:41:55.082Z" type="translation-status" status="2.c" xml:id="UT22084-072-019-38">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-06T13:41:55.082Z" type="text-version" status="0.0.13" xml:id="UT22084-072-019-39">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
