--- a/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light.xml
+++ b/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light.xml
@@ -41,7 +41,7 @@
                 <sponsor xml:id="UT22084-089-012-4103">Zhang Dada</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.8 <date>2024</date>
+                <edition>v 1.1.9 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -253,6 +253,9 @@
                 </change>
                 <change who="#konchog" when="2024-02-20T15:49:01.876Z" type="text-version" status="1.1.8" xml:id="UT22084-089-012-4167">
                     <desc>One fix in the colophon.</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-05-06T13:46:34.388Z" type="text-version" status="1.1.9" xml:id="UT22084-089-012-4168">
+                    <desc>changed svahā to svāhā.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -2315,7 +2318,7 @@
                                 indestructible like a vajra, / And it is unobstructed inside and
                                 out”).</note>
                         </l>
-                        <l>Through method he manifests a emanation body.<note place="end" xml:id="UT22084-089-012-336"> In the Sanskrit for Toh 557, it is
+                        <l>Through method he manifests an emanation body.<note place="end" xml:id="UT22084-089-012-336"> In the Sanskrit for Toh 557, it is
                                     <foreign xml:lang="Sa-Ltn" type="term">nirmitakāya</foreign>,
                                 synonymous with <foreign xml:lang="Sa-Ltn" type="term">nirmāṇakāya</foreign>. Both are translated as <foreign xml:lang="Bo-Ltn" type="term">sprul pa’i sku</foreign> in
                                 Tibetan and <foreign xml:lang="zh" type="term">化身</foreign> in
@@ -10095,15 +10098,15 @@
                                 555 has <foreign xml:lang="Sa-Ltn" type="quote">sāgarasaṃbhuddhāya</foreign>.</note> svāhā | skandhamatāya<note place="end" xml:id="UT22084-089-012-2032"> Toh 555 reads <foreign xml:lang="Sa-Ltn" type="quote">skandhamātāya</foreign>.</note>
                             svāhā | nīlakaṇṭhāya svāhā | <ref cRef="F.105.a" type="folio" xml:id="UT22084-089-012-3425"/> aparājitavīryāya<note place="end" xml:id="UT22084-089-012-2033"> Toh 555 has <foreign xml:lang="Sa-Ltn" type="quote">aparājitaviryāya</foreign>.</note> svāhā | himavatsaṃbhūtāya<note place="end" xml:id="UT22084-089-012-2034"> Toh 555 reads <foreign xml:lang="Sa-Ltn" type="quote">himavanddhasaṃbhutāya</foreign>.</note> svāhā | animilavaktrāya
                             svāhā |<note place="end" xml:id="UT22084-089-012-2035"> Toh 555 has
-                                    <foreign xml:lang="Sa-Ltn" type="quote">anivilavaktāya</foreign>.</note> namo bhagavate brāhmaṇe svahā |<note place="end" xml:id="UT22084-089-012-2036">
+                                    <foreign xml:lang="Sa-Ltn" type="quote">anivilavaktāya</foreign>.</note> namo bhagavate brāhmaṇe svāhā |<note place="end" xml:id="UT22084-089-012-2036">
                                 <foreign xml:lang="Sa-Ltn" type="quote">Svāhā</foreign> is absent in
                                 Toh 556.</note> namaḥ sarasvatyai devyai<note place="end" xml:id="UT22084-089-012-2037"> Toh 555 has <foreign xml:lang="Sa-Ltn" type="quote">mahādeviye</foreign>. YJ’s
                                 transliteration <foreign xml:lang="zh" type="quote">莫訶提鼻裔</foreign>
                                     (<foreign xml:lang="Zh-Ltn" type="quote">mo he ti bi
-                                    yi</foreign>) corresponds to <foreign xml:lang="Sa-Ltn" type="quote">mahādeviye</foreign>.</note> svahā |<note place="end" xml:id="UT22084-089-012-2038">
+                                    yi</foreign>) corresponds to <foreign xml:lang="Sa-Ltn" type="quote">mahādeviye</foreign>.</note> svāhā |<note place="end" xml:id="UT22084-089-012-2038">
                                 <foreign xml:lang="Sa-Ltn" type="quote">Svāhā</foreign> is absent in
                                 Toh 556.</note> sidhyantu<note place="end" xml:id="UT22084-089-012-2039"> YJ has in parentheses “here, recite
-                                one’s own name.” </note> mantrapadā daṃ<note place="end" xml:id="UT22084-089-012-2040"> Toh 555 has <foreign xml:lang="Sa-Ltn" type="quote">dā</foreign>.</note> svahā |<note place="end" xml:id="UT22084-089-012-2041">
+                                one’s own name.” </note> mantrapadā daṃ<note place="end" xml:id="UT22084-089-012-2040"> Toh 555 has <foreign xml:lang="Sa-Ltn" type="quote">dā</foreign>.</note> svāhā |<note place="end" xml:id="UT22084-089-012-2041">
                                 <foreign xml:lang="Sa-Ltn" type="quote">Svāhā</foreign> is absent in
                                 Toh 556.</note> bharato vicita<note place="end" xml:id="UT22084-089-012-2042">
                                 <foreign xml:lang="Sa-Ltn" type="quote">Bharato vicita</foreign> is
@@ -14779,8 +14782,7 @@
                             TWC.</note>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-089-012-2917"/>
-                    <p tid="1742">“ ‘One of her attendants heard men outside saying that
-                        that they were searching for the prince but had still not found him. She was
+                    <p tid="1742">“ ‘One of her attendants heard men outside saying that they were searching for the prince but had still not found him. She was
                         frightened and alarmed, and she went into the palace and said to the queen,
                         “Your Majesty, did you know that I have heard from the men outside that they
                         are searching for the prince but have still not found him.”</p>
