--- a/translations/kangyur/placeholders/067-001_toh262-the_five_thousand_four_hundred_and_fiftythree_names_of_the_buddha.xml
+++ b/translations/kangyur/placeholders/067-001_toh262-the_five_thousand_four_hundred_and_fiftythree_names_of_the_buddha.xml
@@ -11,11 +11,11 @@
                 <sponsor xml:id="UT22084-067-001-1">Joseph Tse and Patricia Tse and family, Wai Ling Tse (張惠玲), late Kwok Ying Tse(謝國英); Shu Chiao Lin (林淑嬌) and Family, late Chung Yuen Chow(鄒宗源)</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2023</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-067-001"/>
             </publicationStmt>
             <sourceDesc>
@@ -59,6 +59,12 @@
                     <desc>3</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-07T07:33:48.351Z" type="text-version" status="0.0.9" xml:id="UT22084-067-001-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-06T13:57:11.907Z" type="translation-status" status="2.h" xml:id="UT22084-067-001-12">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-06T13:57:11.907Z" type="text-version" status="0.0.10" xml:id="UT22084-067-001-13">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
