--- a/translations/kangyur/translations/090-023_toh579,935-the_dharani_of_the_essence_of_the_six_perfections.xml
+++ b/translations/kangyur/translations/090-023_toh579,935-the_dharani_of_the_essence_of_the_six_perfections.xml
@@ -22,7 +22,7 @@
                 <editor role="projectEditor" xml:id="UT22084-090-023-36">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2024</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -30,7 +30,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="2.a">
+                <availability status="2">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -138,6 +138,12 @@
                 </change>
                 <change who="#sameer" when="2024-04-30T07:55:14.027Z" type="text-version" status="0.0.3" xml:id="UT22084-090-023-70">
                     <desc>User set version to 0.0.3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-06T14:25:29.304Z" type="translation-status" status="2" xml:id="UT22084-090-023-71">
+                    <desc>2</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-06T14:25:29.304Z" type="text-version" status="0.0.4" xml:id="UT22084-090-023-72">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
