--- a/translations/kangyur/translations/090-024_toh580,936-the_dharani_for_retaining_the_six_perfections.xml
+++ b/translations/kangyur/translations/090-024_toh580,936-the_dharani_for_retaining_the_six_perfections.xml
@@ -21,7 +21,7 @@
                 <editor role="projectEditor" xml:id="UT22084-090-024-34">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2024</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -29,7 +29,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="2.a">
+                <availability status="2">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -132,6 +132,12 @@
                 </change>
                 <change who="#sameer" when="2024-04-30T08:40:28.29Z" type="text-version" status="0.0.3" xml:id="UT22084-090-024-94">
                     <desc>User set version to 0.0.3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-06T14:26:30.138Z" type="translation-status" status="2" xml:id="UT22084-090-024-95">
+                    <desc>2</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-06T14:26:30.138Z" type="text-version" status="0.0.4" xml:id="UT22084-090-024-96">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
