--- a/translations/kangyur/placeholders/091-031_toh634,874-the_incantation_of_the_one_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/091-031_toh634,874-the_incantation_of_the_one_hundred_and_eight_names_of_avalokitesvara.xml
@@ -21,11 +21,11 @@
                 <consultant role="advisor" xml:id="UT22084-091-031-13">Channa Li</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-091-031"/>
                 <date/>
             </publicationStmt>
@@ -74,6 +74,12 @@
                 </change>
                 <change who="#sameer" when="2024-04-02T11:15:47.818Z" type="text-version" status="0.0.6" xml:id="UT22084-091-031-15">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-07T09:30:30.973Z" type="translation-status" status="2.h" xml:id="UT22084-091-031-16">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-07T09:30:30.973Z" type="text-version" status="0.0.7" xml:id="UT22084-091-031-17">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
