--- a/translations/kangyur/placeholders/043-001_toh64-the_sutra_of_vidyutpraptas_questions.xml
+++ b/translations/kangyur/placeholders/043-001_toh64-the_sutra_of_vidyutpraptas_questions.xml
@@ -15,11 +15,11 @@
                 <sponsor xml:id="UT22084-043-001-12">Anonymous</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-043-001"/>
                 <date/>
             </publicationStmt>
@@ -65,6 +65,12 @@
                 </change>
                 <change who="#cabie-sim" when="2024-03-09T15:54:50.468Z" type="text-version" status="0.0.8" xml:id="UT22084-043-001-13">
                     <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-07T09:51:18.85Z" type="translation-status" status="2.g" xml:id="UT22084-043-001-14">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-07T09:51:18.85Z" type="text-version" status="0.0.9" xml:id="UT22084-043-001-15">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
