--- a/translations/kangyur/placeholders/094-009_toh732,992-the_incantation_of_yasovati.xml
+++ b/translations/kangyur/placeholders/094-009_toh732,992-the_incantation_of_yasovati.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" xml:id="UT22084-094-009-30">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-094-009"/>
                 <date/>
             </publicationStmt>
@@ -101,6 +101,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-30T13:47:18.853Z" type="text-version" status="0.0.12" xml:id="UT22084-094-009-33">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-08T12:05:08.285Z" type="translation-status" status="2.a" xml:id="UT22084-094-009-34">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-08T12:05:08.285Z" type="text-version" status="0.0.13" xml:id="UT22084-094-009-35">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
