--- a/translations/kangyur/placeholders/091-010_toh613,989-the_incantation_of_the_goddess_cunda.xml
+++ b/translations/kangyur/placeholders/091-010_toh613,989-the_incantation_of_the_goddess_cunda.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" xml:id="UT22084-091-010-35">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.16 <date>2024</date>
+                <edition>v 0.0.17 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-091-010"/>
                 <date/>
             </publicationStmt>
@@ -116,6 +116,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-30T13:44:24.07Z" type="text-version" status="0.0.16" xml:id="UT22084-091-010-38">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-08T12:06:21.208Z" type="translation-status" status="2.a" xml:id="UT22084-091-010-39">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-08T12:06:21.208Z" type="text-version" status="0.0.17" xml:id="UT22084-091-010-40">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
