--- a/translations/kangyur/placeholders/071-013_toh299-sutra_on_times_for_the_gong.xml
+++ b/translations/kangyur/placeholders/071-013_toh299-sutra_on_times_for_the_gong.xml
@@ -14,11 +14,11 @@
                 <editor role="projectEditor" xml:id="UT22084-071-013-32">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-071-013"/>
                 <date/>
             </publicationStmt>
@@ -96,6 +96,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-18T08:20:52.894Z" type="text-version" status="0.0.13" xml:id="UT22084-071-013-35">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-08T12:07:21.55Z" type="translation-status" status="2.a" xml:id="UT22084-071-013-36">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-08T12:07:21.55Z" type="text-version" status="0.0.14" xml:id="UT22084-071-013-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
